--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -164,6 +164,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="/cup/reference/payments">
+                            <span class="sub-item">{{ 'Payment methods'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/cup/reference/deliveries">
                             <span class="sub-item">{{ 'Deliveries'|locale }}</span>
                         </a>
