--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -7,7 +7,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="generator" content="WebSpace Engine CMS" />
+        <meta name="generator" content="WebSpace Engine">
+        <meta name="author" content="Ilyin Aleksey">
+        <meta name="copyright" content="{{ 'now'|df('Y') }} (c) Ilyin Aleksey <alksily[at]getwebspace[dot]org>">
 
         {% block head '' %}
         {% block style '' %}
