--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -103,7 +103,7 @@
                                             'message': 'If there is no understanding of what this field affects, leave the default value.'|locale,
                                             'args': {
                                                 'option': _(constant('/App/Domain/Types/PageTypeType::LIST')),
-                                                'selected': item.type
+                                                'selected': item.type.value
                                             }
                                         } %}
                                     </div>
