--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -23,15 +23,15 @@
                     }
                 } %}
 
-                {% for relation in entity.getImages() %}
+                {% for file in entity.getImages() %}
                     <div class="d-inline-block p-2 m-2 bg-grey2 text-center rounded">
                         {% if multiple %}
                             <div class="pb-2">
                                 {% include 'cup/form.twig' with {
                                     'type': 'number',
-                                    'name': 'files[' ~ relation.uuid.toString() ~ '][order]',
+                                    'name': 'files[' ~ file.uuid ~ '][order]',
                                     'args': {
-                                        'value': relation.order,
+                                        'value': file.order,
                                     }
                                 } %}
 
@@ -47,15 +47,15 @@
                             </div>
                         {% endif %}
 
-                        <a href="{{ relation.getPublicPath() }}" target="_blank">
-                            <img class="rounded" height="100" src="{{ relation.getPublicPath('small') }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ relation.getFileName() }} ({{ relation.getFileSize() }})" />
+                        <a href="{{ file.public_path() }}" target="_blank">
+                            <img class="rounded" height="100" src="{{ file.public_path('small') }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.filename() }} ({{ file.size() }})" />
                         </a>
 
                         <div class="pt-2">
                             {% include 'cup/form.twig' with {
                                 'label': '<i class="fa fa-trash"></i>',
                                 'type': 'checkbox',
-                                'name': 'files[' ~ relation.uuid.toString() ~ '][delete]',
+                                'name': 'files[' ~ file.uuid ~ '][delete]',
                                 'args': {
                                     'value': 1
                                 }
