fix catalog order fields value

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -1154,8 +1154,8 @@
                                                     'type': 'select',
                                                     'name': 'catalog[order_fields]',
                                                     'args': {
-                                                        'option': _(['yes', 'no']),
-                                                        'selected': 'no'
+                                                        'option': _(['off', 'on']),
+                                                        'selected': 'off'
                                                     }
                                                 } %}
 
