--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -43,12 +43,12 @@
                             {% for item in list %}
                                 <div class="row">
                                     <div class="col-6 col-sm">
-                                        <a href="{{ item.getPublicPath() }}" target="_blank">
-                                            {{ item.getFileName()|u.truncate(50, '...') }}
+                                        <a href="{{ item.public_path() }}" target="_blank">
+                                            {{ item.filename()|u.truncate(50, '...') }}
                                             <i class="fas fa-external-link-alt"></i>
                                         </a>
                                     </div>
-                                    <div class="col-3 col-sm-2">{{ item.getFileSize() }}</div>
+                                    <div class="col-3 col-sm-2">{{ item.size }}</div>
                                     <div class="col-sm-2 d-none d-sm-block">{{ item.date|df }}</div>
                                     <div class="col-3 col-sm-2 text-right">
                                         <form action="/cup/file/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the file?'|locale }}');">
