--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -102,8 +102,8 @@
                                             'name': 'type',
                                             'message': 'If there is no understanding of what this field affects, leave the default value.'|locale,
                                             'args': {
-                                                'option': _(constant('/App/Domain/Types/PageTypeType::LIST')),
-                                                'selected': item.type.value
+                                                'option': _(constant('/App/Domain/Casts/Page/Type::LIST')),
+                                                'selected': item.type
                                             }
                                         } %}
                                     </div>
